# lilith

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES
.github/workflows/: release.yml
assets/image/: lilith_icon.ai
assets/testdata/: nico_comments_sm9.json  nico_watch_sm9.json
crates/lilith-cli/: Cargo.toml  build.rs
crates/lilith-cli/src/: cli.rs  main.rs
crates/lilith-cli/src/commands/: download.rs
crates/lilith-core/: Cargo.toml
crates/lilith-core/src/: error.rs  lib.rs
crates/lilith-core/src/config/: mod.rs
crates/lilith-core/src/job/: mod.rs
crates/lilith-core/src/model/: mod.rs
crates/lilith-core/src/pipeline/: mod.rs
crates/lilith-ffmpeg/: Cargo.toml
crates/lilith-ffmpeg/src/: command.rs  filter.rs  lib.rs  pipe.rs
crates/lilith-nico/: Cargo.toml
crates/lilith-nico/src/: cookies.rs  lib.rs
crates/lilith-nico/src/api/: mod.rs
crates/lilith-nico/src/comment/: mod.rs
crates/lilith-nico/src/parser/: mod.rs
crates/lilith-nico/src/video/: downloader.rs  mod.rs
crates/lilith-render/: Cargo.toml
crates/lilith-render/src/: lib.rs
crates/lilith-render/src/engine/: mod.rs
crates/lilith-render/src/font/: mod.rs
crates/lilith-render/src/layout/: mod.rs
crates/lilith-render/src/renderer/: mod.rs
crates/lilith-render/src/timeline/: mod.rs
docs/: 企画書.md  作業.md
scripts/: bench.sh  dev.sh
