[workspace]
members = [
    "crates/lilith-cli",
    "crates/lilith-core",
    "crates/lilith-nico",
    "crates/lilith-render",
    "crates/lilith-ffmpeg",
]
default-members = ["crates/lilith-cli"]
resolver = "3"

[workspace.package]
version = "0.1.2"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
lilith-core = { path = "crates/lilith-core" }
lilith-nico = { path = "crates/lilith-nico" }
lilith-render = { path = "crates/lilith-render" }
lilith-ffmpeg = { path = "crates/lilith-ffmpeg" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.47", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "time"] }
tempfile = "3.20"
url = "2.5"
