[package]
name = "lilith-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "lilith"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
lilith-core.workspace = true
lilith-ffmpeg.workspace = true
lilith-nico.workspace = true
lilith-render.workspace = true
serde_json.workspace = true
tokio.workspace = true
